Added hosts avatar section, mobile and screen media

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,33 @@
 </head>
 
 <body>
-  <div id="present-container">
-    <img src="images/page/podcast-new-logo.svg" alt="Més enllà del 2048?"/>
-    <div id="page-title">{{page.title}}</div>
-    <div id="page-subtitle">{{page.subtitle}}</div>
-    <div id="hosts-names">amb David Poblador i Oscar García</div>
+  <div id="main-container">
+    <div id="present-container">
+      <img src="images/page/podcast-new-logo.svg" alt="Més enllà del 2048?"/>
+      <div id="page-title">{{page.title}}</div>
+      <div id="page-subtitle">{{page.subtitle}}</div>
+      <div id="hosts-names">amb</div>
+    </div>
+    <div id="hosts-social-media">
+      <div class="profile-card">
+        <div class="avatar-container">
+          <img src="images/avatars/david.png" alt="Profile Avatar" class="avatar">
+        </div>
+        <div class="text-container">
+          <h2 class="name">David Poblador</h1>
+          <a href="https://twitter.com/davidpoblador" class="social-link">@davidpoblador</a>
+        </div>
+      </div>
+      <div class="profile-card">
+        <div class="avatar-container">
+          <img src="images/avatars/oscar.png" alt="Profile Avatar" class="avatar">
+        </div>
+        <div class="text-container">
+          <h2 class="name">Oscar García</h1>
+          <a href="https://twitter.com/oskarizu" class="social-link">@oskarizu</a>
+        </div>
+      </div>    
+    </div>
   </div>
 </body>
 
