Added footer i contact info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,7 @@
         </div>
       </div>    
     </div>
+    <p class="footer">© 2023 Més enllà del 2048? Tots els drets reservats. Contacta'ns a <a href="mailto:podcast@2048enlla.cat">podcast@2048enlla.cat</a></p>
   </div>
 </body>
 
